# disnake-stubs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml  pre-commit.yml  type-check.yml
disnake-stubs/: __init__.pyi
